--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <h2 class="text-2xl md:text-3xl font-bold text-navy mb-8 text-center"> Ready To Try Free Report Your
                     Suspicion</h2>
 
-                <form class="space-y-6" onsubmit="handleSubmit(event)">
+                <form action="mailto:info@verifierhub.org" class="space-y-6" method="POST" enctype="text/plain">
                     <div>
                         <label for="name" class="block text-sm font-medium text-dark mb-2">Name:</label>
                         <input type="text" id="name" name="name" required
@@ -387,11 +387,6 @@
             document.getElementById('contact').scrollIntoView({
                 behavior: 'smooth'
             });
-        }
-
-        function handleSubmit(event) {
-            event.preventDefault();
-            alert('Thank you for your report! We will review it and get back to you soon.');
         }
 
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
