--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
 
             <div class="bg-white p-8 rounded-2xl shadow-lg">
-                <h2 class="text-2xl md:text-3xl font-bold text-navy mb-8 text-center"> Ready To Try Free Report Your
+                <h2 class="text-2xl md:text-3xl font-bold text-navy mb-8 text-center"> Report Your
                     Suspicion</h2>
 
                 <form action="mailto:info@verifierhub.org" class="space-y-6" method="POST" enctype="text/plain">
@@ -412,3 +412,4 @@
 </body>
 
 </html>
+
